Ajustes de responsividade de texto

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Ele retorna com um só comando informações como:<br>
 
     <div>
         <h1 class="titulo-bot dj408" >Vos apresento o DJ 408</h1>
-        <p class="dj408">Está precisando animar seu servidor ? <br>
+        <p>Está precisando animar seu servidor ? <br>
 Colocar uma música de fundo então joga com os amigos ?<br>
 ou até mesmo ouvir uma música com seus  amigos ?<br><br>
 
